--- a/zuul-gateway/src/main/resources/application.yml
+++ b/zuul-gateway/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
         uri: http://localhost:8082/
         predicates:
         - Path=/loans/**
+      - id: EmployeeModule
+        uri: http://localhost:8084/
+        predicates:
+        - Path=/employees/**
