added API gateway

--- a/zuul-gateway/src/main/resources/application.yml
+++ b/zuul-gateway/src/main/resources/application.yml
@@ -17,3 +17,7 @@ spring:
         uri: http://localhost:8084/
         predicates:
         - Path=/employees/**
+      - id: UserModule
+        uri: http://localhost:8090/
+        predicates:
+        - Path=/user/**        
